[package]
name = "md-compiler"
version = "0.1.0"
authors = ["Kyanne Rose <dev@kyanne.email>"]
edition = "2018"
description = "A teensy tiny markdown compiler based on Jesse Lawson's tutorials."
homepage = "https://github.com/kyrose/md-compiler.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
