[package]
name = "bitsymd"
version = "0.1.0"
authors = ["Kyanne Rose <dev@kyanne.email>"]
edition = "2018"
description = "An itsy-bitsy markdown compiler based on Jesse Lawson's tutorials."
homepage = "https://github.com/kyrose/bitsymd.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
